samples/_failures_safe/1761344353_8978da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_866925c6.c: In function ‘main’:
./samples/SAFE/__tmp_866925c6.c:146:5: error: expected declaration or statement at end of input
  146 |     }
      |     ^
